# crm_management

./: Dockerfile  README.md  build_docker_image.sh  pyproject.toml
crm_management/: main.py
crm_management/crm/: client_base.py  config.py  dto_base.py  service_base.py
crm_management/db/: service_base.py  utils.py
crm_management/domain/accounts/: service.py
crm_management/domain/accounts/crm/: dto.py  service.py
crm_management/domain/accounts/db/: orm.py  service.py
crm_management/domain/contacts/: service.py
crm_management/domain/contacts/crm/: dto.py  service.py
crm_management/domain/contacts/db/: orm.py  service.py
crm_management/domain/deals/: service.py
crm_management/domain/deals/crm/: dto.py  service.py
crm_management/domain/deals/db/: orm.py  service.py
crm_management/domain/reports/db/: orm.py  service.py
crm_management/services/: base.py
scripts/extract_crm_data/: configure_cronjob.sh  main.py  run_main_cli.sh
scripts/update_domain_value/: crm-management.db  main.py  run_main_cli.sh
